fix: stop the scale on mobile.

--- a/src/common/components/FavoriteItem/styles.module.scss
+++ b/src/common/components/FavoriteItem/styles.module.scss
@@ -19,6 +19,12 @@
     background-color: #f3f2f2;
   }
 
+  @media (hover: none) {
+    &:hover {
+      scale: 1;
+    }
+  }
+
   @include mixinHelper.onDesktop {
     width: 45%;
   }
