--- a/src/common/components/StationItem/styles.module.scss
+++ b/src/common/components/StationItem/styles.module.scss
@@ -21,6 +21,12 @@
     background-color: #f3f2f2;
   }
 
+  @media (hover: none) {
+    &:hover {
+      scale: 1;
+    }
+  }
+
   @include mixinHelper.onDesktop {
     max-width: 45%;
   }
